Create 'preambles' with mobile layout.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,11 +18,11 @@
   </p>
 
   <p>
-    At Southwest Recording Service, you will get the best-sounding product in
+    At Southwest Recording Service, you will get the best sounding product in
     the business, usually delivered the same business day, but at a
     refreshingly affordable price.
     We utilize the industry’s best hardware and software, and back it up with
-    in-depth  knowledge of how to put it all to work for you. Whether it is a
+    in-depth knowledge of how to put it all to work for you. Whether it is a
     national commercial campaign, an on-hold message for your phone, or an
     attention-grabbing custom jingle, we are ready to meet your audio needs. 
   </p>
@@ -30,6 +30,56 @@
 </div>
 
 <div id="mic" class="parallax">
+</div>
+
+<div class="container">
+
+  <div class="preamble">
+    <h3>Services</h3>
+    <p>
+      At Southwest Recording Service, we always strive to turn emergencies
+      around as quickly as possible. Next-day turnaround is typical, and
+      same-day turnaround is not out of the question!
+    </p>
+    <%= link_to "Services",
+        "/services.html",
+        class: "button" %>
+  </div>
+
+  <div class="preamble">
+    <h3>Demos</h3>
+    <p>
+      Here is a small sampling of actual projects that have been completed at
+      Southwest Recording Service. Other voices available upon request. 
+    </p>
+    <%= link_to "Demos",
+        "/demos.html",
+        class: "button" %>
+  </div>
+
+  <div class="preamble">
+    <h3>About</h3>
+    <p>
+      Who we are and what do we do.
+    </p>
+    <%= link_to "About",
+        "/about.html",
+        class: "button" %>
+  </div>
+
+  <div class="preamble">
+    <h3>Contact</h3>
+    <p>
+      Have a voice-over or audio production project we can help with?
+    </p>
+    <%= link_to "Contact Us",
+        "/contact.html",
+        class: "button" %>
+  </div>
+
+</div>
+
+<div id="levels" class="parallax">
 </div>
 
 <div class="container">
@@ -44,8 +94,5 @@
     a particular auditory impression<br>
     <em>(adj)</em> solid, firm, stable, free from flaws or defects
   </p>
-
-</div>
-
-<div id="levels" class="parallax">
+  
 </div>
