--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -53,6 +53,12 @@ footer {
   @include media($large-viewport-plus) {
     @include span-columns(6 of 12);
     @include omega(even);
+
+    &:nth-last-child(-n+2) {
+      p {
+        height: 72px;
+      }
+    }
   }
 
   @include media(min-width $large-viewport max-width 1100px) {
