--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -58,17 +58,17 @@
   </div>
 
   <div class="preamble">
-    <h3>About</h3>
+    <h3>About Us</h3>
     <p>
       Who we are and what do we do.
     </p>
-    <%= link_to "About",
+    <%= link_to "About Us",
         "/about.html",
         class: "button" %>
   </div>
 
   <div class="preamble">
-    <h3>Contact</h3>
+    <h3>Contact Us</h3>
     <p>
       Have a voice-over or audio production project we can help with?
     </p>
