Correct grammar error.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -38,7 +38,7 @@
     <h3>Services</h3>
     <p>
       At Southwest Recording Service, we always strive to turn emergencies
-      around as quickly as possible. Next-day turnaround is typical, and
+      around as quickly as possible. Next-day turnaround is typical and
       same-day turnaround is not out of the question!
     </p>
     <%= link_to "Services",
