Load fonts via style sheet import.

--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,4 +1,5 @@
 // Typography
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700italic,700|Roboto+Slab);
 $base-font-family: 'Open Sans', sans-serif;
 $heading-font-family: 'Roboto Slab', serif;
 
