--- a/source/equipment.html.erb
+++ b/source/equipment.html.erb
@@ -322,7 +322,7 @@ layout: testimonial
   <li>Alesis M1 Active Nearfileds</li>
   <li>JBL 6208 Surrounds</li>
   <li>Yamaha NS-A635 Centers</li>
-  <li>Studio Technologies 68A/69A Monitor Controller:</li>
+  <li>Studio Technologies 68A/69A Monitor Controller</li>
   </ul>
     
   </div>
