Write meta descriptions for each interior page.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,6 +1,6 @@
 ---
 title: About
-meta_description: About meta description...
+meta_description: Southwest Recording has been providing major-market audio to its customers for over 20 years. Allan Blackwell has won numerous awards for his productions.
 
 layout: interior
 
