--- a/source/css-demo.html.erb
+++ b/source/css-demo.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Style Demo 
-meta_description: Style demo for Southwest Recording Services.
+meta_description: Style demo for Southwest Recording Service.
 
 hide_from_sitemap: true
 ---
