--- a/source/demos.html.erb
+++ b/source/demos.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Demos
-meta_description: Demos meta description...
+meta_description: You might have heard Allan's voice on national ad campaigns for Advantage Tax Resolution, Go-DISH, Consumer Debt Relief, and Peachtree Financial Services.
 
 layout: interior
 
