--- a/source/equipment.html.erb
+++ b/source/equipment.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Equipment
-meta_description: Equipment meta description...
+meta_description: An extensive list of professional audio equipment and software owned by Southwest Recording Service. We use nothing short of the best equipment available.
 
 layout: testimonial 
 ---
