--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Services
-meta_description: Services meta description...
+meta_description: Southwest Recording can provide a wide range of audio services such as radio/TV ads, TV promos, jingles, on-hold/phone prompts, and music recording/editing.
 
 layout: interior
 
