--- a/source/testimonials.html.erb
+++ b/source/testimonials.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Testimonials
-meta_description: Testimonials meta description...
+meta_description: Read what clients have to say about working with Southwest Recording Service.
 
 layout: testimonial
 ---
@@ -69,7 +69,7 @@ layout: testimonial
         always (and I mean <strong>always!</strong>) been willing to do whatever
         it takes to meet our deadlines, even when they're completely
         unrealistic! Just as importantly, the audio he delivers is always
-        top-notch. Great voiceover, great mixes. Southwest Recording is the "go
+        top-notch. Great voice-over, great mixes. Southwest Recording is the "go
         to" studio for us!"
       </p>
       <p>
