--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Contact
-meta_description: Contact meta description...
+meta_description: Contact Southwest Recording Service.
 
 layout: interior
 
