--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@
 <div class="container">
   
   <h2 class="feature">
-    Amazing Quality, Quick Turnaround<br>
+    Amazing Quality, Quick Turnaround,<br>
     Competitive Pricing
   </h2>
 
