Set sitemap priorities.

--- a/source/testimonials.html.erb
+++ b/source/testimonials.html.erb
@@ -3,6 +3,7 @@ title: Testimonials
 meta_description: Read what clients have to say about working with Southwest Recording Service.
 
 layout: testimonial
+priority: 0.3
 ---
 
 <section id="nancy-rommes">
