--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,7 @@
     <meta name="description" content="<%= meta_description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag "southwest-recording" %>
+    <%= partial "analytics" %>
   </head>
   
   <body>
