--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,9 +18,9 @@ priority: 1.0
   </p>
 
   <p>
-    At Southwest Recording Service, you will get the best sounding product in
-    the business, usually delivered the same business day, but at a
-    refreshingly affordable price.
+    At Southwest Recording Service, you get all three...the best sounding
+    product in the business, typically delivered the same business day, but at
+    a refreshingly affordable price.
     We utilize the industry’s best hardware and software, and back it up with
     in-depth knowledge of how to put it all to work for you. Whether it is a
     national commercial campaign, an on-hold message for your phone, or an
