Update equipment list.

--- a/source/equipment.html.erb
+++ b/source/equipment.html.erb
@@ -24,7 +24,7 @@ layout: testimonial
 <h3>Main Recording System</h3>
 
 <ul>
-<li>Pro Tools 10 HD + Pro Tools 11 HD</li>
+<li>Pro Tools 10 HD + Pro Tools 12 HD</li>
 <li>Windows 7 64-Bit Ultimate</li>
 <li>Digi 003 Control Surface</li>
 </ul>
@@ -56,6 +56,7 @@ layout: testimonial
 <li>Little Labs Voice of God</li>
 <li>Neve 1073</li>
 <li>Neve 88RS</li>
+<li>Neve 33609 Compressor</li>
 <li>Precision De-Esser</li>
 <li>Precision Hz</li>
 <li>Precision Limiter</li>
