Add link to dedicated on-hold website.

--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -81,6 +81,10 @@ client: Nancy Rommes, Travel Audios
       to hear when you place them on hold with an on-hold system from Southwest
       Recording Service.
     </p>
+    <p>
+      For more information, please visit our our dedicated
+      <a href="http://www.theholdzone.com/" target="_blank">on-hold</a> website.
+    </p>
   </div>
 </section>
 
