Update equipment list.

--- a/source/equipment.html.erb
+++ b/source/equipment.html.erb
@@ -25,8 +25,9 @@ layout: testimonial
 
 <ul>
 <li>Pro Tools 10 HD + Pro Tools 12 HD</li>
-<li>Windows 7 64-Bit Ultimate</li>
-<li>Digi 003 Control Surface</li>
+<li>Windows 10 64-Bit</li>
+<li>Universal Audio Apollo 8 Thunderbolt</li>
+<li>Behringer ADA 8000</li>
 </ul>
 
   </div>
