Update main console to Soundcraft GB8-32.

--- a/source/equipment.html.erb
+++ b/source/equipment.html.erb
@@ -11,7 +11,7 @@ layout: testimonial
 <h3>Recording Console</h3>
 
 <ul>
-<li>Allen &amp; Heath ML 4000</li>
+<li>Soundcraft GB8-32</li>
 <li>Studio Technologies 68A/69A Monitor Controller</li>
 </ul>
 
