Update to Pro Tools | Ultimate.

--- a/source/equipment.html.erb
+++ b/source/equipment.html.erb
@@ -24,7 +24,7 @@ layout: testimonial
 <h3>Main Recording System</h3>
 
 <ul>
-<li>Pro Tools 10 HD + Pro Tools 12 HD</li>
+<li>Pro Tools | Ultimate</li>
 <li>Windows 10 64-Bit</li>
 <li>Universal Audio Apollo 8 Thunderbolt</li>
 </ul>
